--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-masked-view/masked-view": "0.2.8",
@@ -18,6 +19,8 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@types/react": "~18.0.27",
+    "@ui-kitten/components": "^5.1.2",
+    "@ui-kitten/eva-icons": "^5.1.2",
     "expo": "~48.0.6",
     "expo-blur": "~12.2.2",
     "expo-camera": "~13.2.1",
@@ -34,6 +37,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "^13.9.0",
     "react-native-web": "~0.18.10",
     "typescript": "^4.9.4"
   },
