--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
@@ -39,8 +40,10 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "^13.9.0",
     "react-native-swipe-up-down": "^1.2.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.10",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "react-native-pager-view": "6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
