--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-drop-shadow": "0.0.6",
     "react-native-expo-swipe-button": "^1.0.2",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-pager-view": "6.1.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
@@ -42,8 +44,7 @@
     "react-native-swipe-up-down": "^1.2.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.10",
-    "typescript": "^4.9.4",
-    "react-native-pager-view": "6.1.2"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
