--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "~18.0.27",
     "@ui-kitten/components": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
+    "axios": "^1.3.6",
     "expo": "~48.0.6",
     "expo-blur": "~12.2.2",
     "expo-camera": "~13.2.1",
@@ -33,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-animatable": "^1.3.3",
     "react-native-drop-shadow": "0.0.6",
     "react-native-expo-swipe-button": "^1.0.2",
     "react-native-gesture-handler": "~2.9.0",
@@ -44,7 +46,8 @@
     "react-native-swipe-up-down": "^1.2.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.10",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
