--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@eva-design/eva": "^2.1.1",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
@@ -39,6 +40,7 @@
     "react-native-expo-swipe-button": "^1.0.2",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-pager-view": "6.1.2",
+    "react-native-paper": "^5.7.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
@@ -46,8 +48,7 @@
     "react-native-swipe-up-down": "^1.2.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.10",
-    "typescript": "^4.9.4",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
