feat: publish version and updates...

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-swipe-up-down": "^1.2.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.10",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
