--- a/eas.json
+++ b/eas.json
@@ -3,6 +3,13 @@
     "version": ">= 3.8.1"
   },
   "build": {
+    "development-simulator": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      }
+    },
     "preview": {
       "android": {
         "buildType": "apk"
