--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "expo-linear-gradient": "~12.1.2",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
     "react-native-animatable": "^1.3.3",
+    "react-native-collapsible": "^1.6.1",
     "react-native-drop-shadow": "0.0.6",
     "react-native-expo-swipe-button": "^1.0.2",
     "react-native-gesture-handler": "~2.9.0",
@@ -48,8 +50,7 @@
     "react-native-swipe-up-down": "^1.2.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.10",
-    "typescript": "^4.9.4",
-    "expo-updates": "~0.16.4"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
